fix(form) checkbox and radio vertical alignment fixed

--- a/src/css/components/_form.scss
+++ b/src/css/components/_form.scss
@@ -52,6 +52,11 @@
         .input--checkbox {
             display: inline-block !important;
             vertical-align: text-bottom;
+
+            input {
+                vertical-align: middle;
+            }
+
         }
 
         .input--icon {
